--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,14 @@
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
 
+  <div>
+    <ul>
+      <li><%= link_to "sign-in", new_user_registration_path %></li>
+      <li><%= link_to "create account", user_session_path %></li>
+      <li><%= link_to "homepage", root_path %></li>
+    </ul>
+  </div>
+
   <%= yield %>
   </body>
 </html>
