--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,27 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>DummyComApp</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<head>
+  <title>DummyComApp</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_importmap_tags %>
-  </head>
+  <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+  <%= javascript_importmap_tags %>
+</head>
 
-  <body>
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
+<body>
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 
-  <div>
-    <ul>
-      <li><%= link_to "sign-in", new_user_registration_path %></li>
-      <li><%= link_to "create account", user_session_path %></li>
+<div>
+  <ul>
+    <% if user_signed_in?  %>
+      <li><%= link_to "products", products_path %></li>
       <li><%= link_to "homepage", root_path %></li>
-    </ul>
-  </div>
+      <li><%= link_to "sign out", destroy_user_session_path, data: { turbo_method: :delete } %></li>
+    <% else %>
+      <li><%= link_to "sign-in", user_session_path %></li>
+      <li><%= link_to "create account", new_user_registration_path %></li>
+      <li><%= link_to "homepage", root_path %></li>
+    <% end %>
+  </ul>
+</div>
 
-  <%= yield %>
-  </body>
+<%= yield %>
+</body>
 </html>
