--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -3,15 +3,8 @@
     <strong>Name:</strong>
     <%= product.name %>
   </p>
-
   <p>
-    <strong>Image:</strong>
-    <%= product.image %>
+    <strong>price:</strong>
+    <%= product.price %>
   </p>
-
-  <p>
-    <strong>Image url:</strong>
-    <%= product.image_url %>
-  </p>
-
 </div>
