--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,12 +3,16 @@
 <h1>Products</h1>
 
 <div id="products">
-  <% @products.each do |product| %>
-    <%= render product %>
-    <p>
-      <%= link_to "Show this product", product %>
-    </p>
-  <% end %>
+  <ul>
+    <% @products.each do |product| %>
+      <li class="product_item">
+        <%= render product %>
+        <p>
+          <%= link_to "Show this product", product %>
+        </p>
+      </li>
+    <% end %>
+  </ul>
 </div>
 
 <%= link_to "New product", new_product_path %>
