--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to products", products_path %>
+  <%= link_to "Back to products", new_user_product_path(current_user) %>
 </div>
