--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
     <% if user_signed_in?  %>
       <li><%= link_to "products", products_path %></li>
       <li><%= link_to "homepage", root_path %></li>
+      <li><%= link_to "AI GPTChat", root_path %></li>
       <li><%= link_to "sign out", destroy_user_session_path, data: { turbo_method: :delete } %></li>
     <% else %>
       <li><%= link_to "sign-in", user_session_path %></li>
