--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -6,7 +6,20 @@
   <ul>
     <% @products.each do |product| %>
       <li class="product_item">
-        <%= render product %>
+        <div><%= render product %></div>
+        <div>
+          <% if user_signed_in? %>
+            <% if current_user %>
+              <!--favourite code-->
+              <% unless current_user.favorite_products.exists?(id: product) %>
+                <%= link_to 'Add to favorites', favorite_products_path(product_id: product), method: :post, data: { "turbo-method": :post } %>
+              <% else %>
+                <%= link_to 'Remove from favorites', favorite_product_path(product), method: :delete, data: { "turbo-method": :delete } %>
+              <% end %>
+              <!--favourite code-->
+            <% end %>
+          <% end %>
+        </div>
         <p>
           <%= link_to "Show this product", product %>
         </p>
