--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -11,10 +11,10 @@
           <% if user_signed_in? %>
             <% if current_user %>
               <!--favourite code-->
-              <% unless current_user.favorite_products.exists?(id: product) %>
-                <%= link_to 'Add to favorites', favorite_products_path(product_id: product), method: :post, data: { "turbo-method": :post } %>
-              <% else %>
+              <% if current_user.favorite_products.exists?(id: product) %>
                 <%= link_to 'Remove from favorites', favorite_product_path(product), method: :delete, data: { "turbo-method": :delete } %>
+              <% else %>
+                <%= link_to 'Add to favorites', favorite_products_path(product_id: product), method: :post, data: { "turbo-method": :post } %>
               <% end %>
               <!--favourite code-->
             <% end %>
