--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -10,6 +10,10 @@
         <div>
           <% if user_signed_in? %>
             <% if current_user %>
+              <!--impression code-->
+              <div><%= product.impressionist_count(filter: :ip_address) %> views</div>
+              <!--impression code-->
+
               <!--favourite code-->
               <% if current_user.favorite_products.exists?(id: product) %>
                 <%= link_to 'Remove from favorites', favorite_product_path(product), method: :delete, data: { "turbo-method": :delete }, id: 'fav_remove_link', remote: true %>
@@ -21,7 +25,7 @@
           <% end %>
         </div>
         <p>
-          <%= link_to "Show this product", product %>
+          <%= link_to "view", product %>
         </p>
       </li>
     <% end %>
