--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,6 @@
 <!--<p style="color: green"><%#= notice %></p>-->
 
-<h1>Products hello</h1>
+<h1>Products</h1>
 
 <div id="products">
   <ul>
@@ -11,7 +11,7 @@
           <% if user_signed_in? %>
             <% if current_user %>
               <!--impression code-->
-              <div><%= product.impressionist_count(filter: :ip_address) %> views</div>
+              <div><%= product.impressions_count %> views</div>
               <!--impression code-->
 
               <!--favourite code-->
