--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -7,5 +7,5 @@
     <strong>price:</strong>
     <%= product.price %>
   </p>
-  <p><%= link_to 'review product', "#" %></p>
+  <p><%= link_to 'review product', new_user_review_path(@user) %></p>
 </div>
