--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -4,6 +4,4 @@
 
 <br>
 
-<div>
-  <%= link_to "Back to reviews", reviews_path %>
-</div>
+<div><%# link_to "Back to reviews", reviews_path %></div>
