--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -7,7 +7,8 @@
     <%= f.input :rating %>
     <%= f.input :comment %>
     <%= f.input :user_id %>
-    <%= f.input :product_id %>
+    <%= f.input :product_id, input_html: { value: "#{@review.product}" } %>
+    <%# f.input :product_id %>
   </div>
 
   <div class="form-actions">
