Remove share gem

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id product %>">
+<div id="<%= dom_id product %>" data-controller="share" data-share-url-value="<%= product_url(product) %>">
   <p>
     <strong>Name:</strong>
     <%= product.name %>
