Update share code

--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -7,4 +7,7 @@
     <strong>price:</strong>
     <%= product.price %>
   </p>
+  <%= content_tag(:p, "", class: "result", data: {
+    share_target: "result"
+  }) %>
 </div>
