--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -18,7 +18,7 @@
     share_target: "result"
   }) %>
 
-  <p>
+  <p class="hide">
     <a onclick="javascript:window.open('http://www.facebook.com/sharer/sharer.php?u=<%= url_for([product, {only_path: false}]) %>',
       '_blank',
       'width=800, height=500, top=200, left=300');void(0);">here FB!!!<i class="fa fa-facebook" aria-hidden="true"></i>
