--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,13 +1,6 @@
 <p style="color: green"><%= notice %></p>
 <div class="product_item">
-  <%= render @product %>
-
-  <%= social_share_button_tag("text to share", url: 'https://www.yourdomain.com', desc: 'description for facebook') %>
-
-  <div>hello-share<%= social_share_button_tag(@product.name, :url => "http://myapp.com/foo/bar",
-                                   # :image => "#{@product.variants.first.image_url}",
-                                   desc: "The summary of page", via: "MyTwitterName") %></div>
-
+  <div><%= render @product %></div>
   <div>
     <% if @product.reviews.reviewer_exist?(@user, @product) %>
       <p>you have already reviewed this product</p>
@@ -15,21 +8,17 @@
       <%= link_to 'review product', new_user_review_path(@user, product_id: @product) %>
     <% end %>
   </div>
-
-  <p>
-  <div><u>product reviews:</u></div>
-  <ul>
-    <% @product.reviews.each do |review| %>
-      <li>
-        <div>review: <%= review.rating %></div>
-        <div><%= review.comment %></div>
-        <div><%= review.user.email %></div>
-      </li><br/>
-    <% end %>
-  </ul>
-  </p>
+  <div>
+    <div><u>product reviews:</u></div>
+    <ul>
+      <% @product.reviews.each do |review| %>
+        <li>
+          <div>review: <%= review.rating %></div>
+          <div><%= review.comment %></div>
+          <div><%= review.user.email %></div>
+        </li><br/>
+      <% end %>
+    </ul>
+  </div>
 </div>
 
-<div>
-
-</div>
