--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,7 @@
 <!--<p style="color: green"><%#= notice %></p>-->
 
+<div><%= link_to "New product", new_product_path %></div>
+
 <h1>Products</h1>
 
 <div id="products">
@@ -38,4 +40,3 @@
   </ul>
 </div>
 
-<%= link_to "New product", new_product_path %>
