--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -88,3 +88,30 @@ input[type='radio']:checked:after {
     font-weight: bold;
     text-transform: capitalize;
 }
+
+.form_fields_cover {
+    background-color: #DADADA;
+    margin-bottom: 15px;
+    padding: 15px;
+}
+
+.form_category_drop_down_cover {
+    background-color: #DADADA;
+    margin-bottom: 15px;
+    padding: 15px;
+}
+
+.form_title {
+    font-weight: bold;
+    text-transform: capitalize;
+    margin-bottom: 5px;
+}
+
+.form_category_drop_downs {
+    display: flex;
+    align-items: center;
+}
+
+.category_drop_field {
+    margin-right: 15px;
+}
