--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,16 +1,31 @@
+<div>
+  <%= simple_form_for [@user, @product] do |f| %>
+    <%= f.error_notification %>
+    <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-<%= simple_form_for [@user, @product] do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+    <div class="form-inputs">
+      <div class="form_fields_cover">
+        <div class="form_title">category inputs</div>
+        <div><%= f.input :name %></div>
+        <div><%= f.input :image %></div>
+        <div><%= f.input :image_url %></div>
+        <div><%= f.input :price %></div>
+      </div>
 
-  <div class="form-inputs">
-    <%= f.input :name %>
-    <%= f.input :image %>
-    <%= f.input :image_url %>
-    <%= f.input :price %>
-  </div>
+      <div class="form_category_drop_down_cover">
+        <div class="form_title">category section</div>
+        <div class="form_category_drop_downs">
+          <div class="category_drop_field"><%= f.association :category_productitemtype, collection: CategoryProductitemtype.all.order(:name), prompt: "Please Select", label: false %></div>
+          <div class="category_drop_field"><%= f.association :category_productitemtype, collection: CategoryProductitemtype.all.order(:name), prompt: "Please Select", label: false %></div>
+          <div class="category_drop_field"><%= f.association :category_productitemtype, collection: CategoryProductitemtype.all.order(:name), prompt: "Please Select", label: false %></div>
+          <div class="category_drop_field"><%= f.association :category_productitemtype, collection: CategoryProductitemtype.all.order(:name), prompt: "Please Select", label: false %></div>
+        </div>
 
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
+      </div>
+    </div>
+
+    <div class="form-actions">
+      <%= f.button :submit %>
+    </div>
+  <% end %>
+</div>
