--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -6,7 +6,7 @@
     <div class="form-inputs">
       <!--section-->
       <div class="form_fields_cover">
-        <div class="form_title">category inputs</div>
+        <div class="form_title">input section</div>
         <div><%= f.input :name %></div>
         <div><%= f.input :image %></div>
         <div><%= f.input :image_url %></div>
