--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,7 @@
 <p style="color: green"><%= notice %></p>
 <div class="product_item">
 
+  <!--section-->
   <div class="margin_bottom_15px">
     <div class="product_title">product category</div>
     <span><%= @product.category_producttype.name %></span>
@@ -11,6 +12,7 @@
     <span>--></span>
     <span><%= @product.category_productstyle.name %></span>
   </div>
+  <!--section-->
 
   <!--section-->
   <div><%= render @product %></div>
