--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,6 +15,13 @@
   <!--section-->
 
   <!--section-->
+  <div class="margin_bottom_15px">
+    <div class="product_title">product image</div>
+    <div class="product_image"><%= image_tag "#{@product.image_url}" %></div>
+  </div>
+  <!--section-->
+
+  <!--section-->
   <div><%= render @product %></div>
   <!--section-->
 
