--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -26,7 +26,11 @@
   <!--section-->
 
   <!--section-->
-  <div>
+  <div class="margin_bottom_15px"><%= link_to "create variant for product", "#" %></div>
+  <!--section-->
+
+  <!--section-->
+  <div class="margin_bottom_15px">
     <% if @product.reviews.reviewer_exist?(@user, @product) %>
       <p>you have already reviewed this product</p>
     <% else  %>
