--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -121,3 +121,27 @@ input[type='radio']:checked:after {
 .product_image img {
     width: 100px;
 }
+
+.variant_cover ul {
+    background-color: red;
+    list-style-type: none;
+    padding: 0px;
+    align-items: center;
+    margin: 0px;
+}
+
+.variant_cover ul li {
+    background-color: yellow;
+    width: 100px;
+}
+
+.variant_cover ul li img {
+    width: 100%
+}
+
+
+
+
+
+
+
