--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,7 +19,7 @@
 }
 
 .product_item {
-    background-color: #CCCCCC;
+    background-color: #B7BABD;
     padding: 15px;
     border-radius: 5px;
 }
@@ -123,16 +123,20 @@ input[type='radio']:checked:after {
 }
 
 .variant_cover ul {
-    background-color: red;
+    background-color: #F2F2F2;
     list-style-type: none;
-    padding: 0px;
+    border-radius: 3px;
+    padding: 15px;
     align-items: center;
     margin: 0px;
+    display: flex;
+
 }
 
 .variant_cover ul li {
     background-color: yellow;
     width: 100px;
+    margin-right: 15px;
 }
 
 .variant_cover ul li img {
