--- a/app/views/variants/_form.html.erb
+++ b/app/views/variants/_form.html.erb
@@ -1,15 +1,16 @@
+<div>
+  <%= simple_form_for(@variant) do |f| %>
+    <%= f.error_notification %>
+    <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
-<%= simple_form_for(@variant) do |f| %>
-  <%= f.error_notification %>
-  <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+    <div class="form-inputs">
+      <%= f.input :product_id, input_html: { value: "#{@product.id}" } %>
+      <%= f.input :image_url %>
+      <%= f.input :colour %>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :product_id, input_html: { value: "#{@product.id}" } %>
-    <%= f.input :image_url %>
-    <%= f.input :colour %>
-  </div>
-
-  <div class="form-actions">
-    <%= f.button :submit %>
-  </div>
-<% end %>
+    <div class="form-actions">
+      <%= f.button :submit %>
+    </div>
+  <% end %>
+</div>
