--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,22 +12,28 @@
 </head>
 
 <body>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
+<!--<p class="notice"><%#= notice %></p>-->
+<!--<p class="alert"><%#= alert %></p>-->
 
 <div>
-  <ul>
-    <% if user_signed_in?  %>
+
+  <% if user_signed_in?  %>
+    <div class="header_cover">header_signed_in</div>
+    <ul>
       <li><%= link_to "products", products_path %></li>
       <li><%= link_to "homepage", root_path %></li>
       <li><%= link_to "AI GPTChat", root_path %></li>
       <li><%= link_to "sign out", destroy_user_session_path, data: { turbo_method: :delete } %></li>
-    <% else %>
+    </ul>
+  <% else %>
+    <div>header_signed_out</div>
+    <ul>
       <li><%= link_to "sign-in", user_session_path %></li>
       <li><%= link_to "create account", new_user_registration_path %></li>
       <li><%= link_to "homepage", root_path %></li>
-    <% end %>
-  </ul>
+    </ul>
+  <% end %>
+
 </div>
 
 <%= yield %>
