--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,22 +1,51 @@
 <div class="header_cover">
   <div class="left_section">
-    <div><%= link_to "App Logo", root_path %></div>
+    <div><%= link_to "App Logo", root_path, class: "header_logo" %></div>
   </div>
   <div class="right_section">
     <ul class="header_icon_ul">
-      <div><%= link_to "sign out", root_path, class: "icon_box_link" %></div>
-      <li>
-        <%= link_to "#", class: "icon_box_link" do %>
-          <div><span class="material-icons">person</span></div>
-          <div>user</div>
-        <% end %>
-      </li>
-      <li>
-        <%= link_to "#", class: "icon_box_link" do %>
-          <div><span class="material-icons">shopping_cart</span></div>
-          <div>cart</div>
-        <% end %>
-      </li>
+      <% if user_signed_in? %>
+        <div><%= link_to "sign out", destroy_user_session_path, data: { turbo_method: :delete }, class: "icon_box_link sign_out_btn header_text" %></div>
+        <li>
+          <%= link_to root_path, class: "icon_box_link" do %>
+            <div><span class="material-icons">smart_toy</span></div>
+            <div class="header_text">AI GPTChat</div>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to products_path, class: "icon_box_link" do %>
+            <div><span class="material-icons">category</span></div>
+            <div class="header_text">products</div>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to "#", class: "icon_box_link" do %>
+            <div><span class="material-icons">person</span></div>
+            <div class="header_text">user</div>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to "#", class: "icon_box_link" do %>
+            <div><span class="material-icons">shopping_cart</span></div>
+            <div class="header_text">cart</div>
+          <% end %>
+        </li>
+        <li>
+          <%= link_to root_path, class: "icon_box_link" do %>
+            <div><span class="material-icons">home</span></div>
+            <div class="header_text">home</div>
+          <% end %>
+        </li>
+      <% else %>
+        <div><%= link_to "sign-in", user_session_path, class: "icon_box_link sign_out_btn header_text" %></div>
+        <div><%= link_to "create account", new_user_registration_path, class: "icon_box_link sign_out_btn header_text margin_left_15px" %></div>
+        <li>
+          <%= link_to root_path, class: "icon_box_link" do %>
+            <div><span class="material-icons">home</span></div>
+            <div class="header_text">home</div>
+          <% end %>
+        </li>
+      <% end %>
     </ul>
   </div>
 </div>
