--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
 
 <div>
   <div class="header_container"><%= render 'shared/header' %></div>
-  <%= yield %>
+ <div class="main_container"><%= yield %></div>
 </div>
 
 
