--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -27,7 +27,7 @@
         <li>
           <%= link_to "#", class: "icon_box_link" do %>
             <div><span class="material-icons">shopping_cart</span></div>
-            <div class="header_text">cart</div>
+            <div class="header_text">cart <span>(2)</span></div>
           <% end %>
         </li>
         <li>
