--- a/app/views/static_pages/homepage.html.erb
+++ b/app/views/static_pages/homepage.html.erb
@@ -1,2 +1,6 @@
 <h1>StaticPages#homepage</h1>
 <p>Find me in app/views/static_pages/homepage.html.erb</p>
+<div>
+  <div>video link</div>
+  <div><%= link_to "stripe tutorial", "https://www.youtube.com/watch?v=qEVn9sXNCAI&list=PLdTytUiloS14rDdf6ftW63pIgoxshY12w", target: "_blank" %></div>
+</div>
