--- a/app/views/variants/_form.html.erb
+++ b/app/views/variants/_form.html.erb
@@ -12,7 +12,7 @@
       <div><%= f.hidden_field :image_var_cache %></div>
     </div>
 
-    <div class="form-actions">
+    <div class="form-actions submit_btn">
       <%= f.button :submit %>
     </div>
   <% end %>
