--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
 <div>
   <div class="header_container"><%= render 'shared/header' %></div>
  <div class="main_container"><%= yield %></div>
+  <div class="footer_container"><%= render 'shared/footer' %></div>
 </div>
 
 
