--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -7,3 +7,25 @@
     bottom: 0;
     width: 100%;
 }
+
+.footer_container ul {
+    background-color: transparent;
+    list-style-type: none;
+    width: 500px;
+    margin: auto;
+    text-align: center;
+}
+
+.footer_container ul li a {
+    font-family: sans-serif;
+    font-size: 10px;
+    letter-spacing: 1px;
+    color: #ffffff;
+    text-decoration: none;
+}
+
+/*.variant_cover ul li {*/
+/*    background-color: yellow;*/
+/*    width: 100px;*/
+/*    margin-right: 15px;*/
+/*}*/
