--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,10 @@
 <div class="footer_cover">
   <div class="inner_footer_section">
     <ul>
-      <li><%= link_to "sign-in admin" %></li>
+      <li><%= link_to "sign-in admin", admin_session_path, class: "#" %></li>
+      <li>|</li>
+      <li><%= link_to "sign-up admin", new_admin_registration_path, class: "#" %></li>
     </ul>
   </div>
 </div>
+
