--- a/app/views/shared/_header_admin.html.erb
+++ b/app/views/shared/_header_admin.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="right_section">
     <ul class="header_icon_ul">
-      <% if user_signed_in? %>
+      <% if admin_signed_in? %>
         <div><%= link_to "sign out", destroy_admin_session_path, data: { turbo_method: :delete }, class: "icon_box_link sign_out_btn header_text" %></div>
         <li>
           <%= link_to root_path, class: "icon_box_link" do %>
