--- a/app/views/shared/_header_general.html.erb
+++ b/app/views/shared/_header_general.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="right_section">
     <ul class="header_icon_ul">
-        <div><%= link_to "sign-in 01", user_session_path, class: "icon_box_link sign_out_btn header_text" %></div>
+        <div><%= link_to "sign-in", user_session_path, class: "icon_box_link sign_out_btn header_text" %></div>
         <div><%= link_to "create account", new_user_registration_path, class: "icon_box_link sign_out_btn header_text margin_left_15px" %></div>
         <li>
           <%= link_to root_path, class: "icon_box_link" do %>
