--- a/app/views/shared/_header_user.html.erb
+++ b/app/views/shared/_header_user.html.erb
@@ -19,6 +19,12 @@
           <% end %>
         </li>
         <li>
+          <%= link_to products_path, class: "icon_box_link" do %>
+            <div><span class="material-icons">category</span></div>
+            <div class="header_text">products-user</div>
+          <% end %>
+        </li>
+        <li>
           <%= link_to "#", class: "icon_box_link" do %>
             <div><span class="material-icons">shopping_cart</span></div>
             <div class="header_text">cart <span>(2)</span></div>
