--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <%= simple_form_for [@user, @product] do |f| %>
+  <%= simple_form_for [@admin, @product] do |f| %>
     <%= f.error_notification %>
     <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
 
