--- a/app/views/shared/_header_admin.html.erb
+++ b/app/views/shared/_header_admin.html.erb
@@ -19,7 +19,7 @@
           <% end %>
         </li>
         <li>
-          <%= link_to "#", class: "icon_box_link" do %>
+          <%= link_to dashboard_admin_path(current_admin), class: "icon_box_link" do %>
             <div><span class="material-icons">person</span></div>
             <div class="header_text">admin</div>
           <% end %>
