--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -26,13 +26,22 @@
           </div>
 
           <!--category-->
-          <div class="category_drop_field"><%= f.association :category_productitemtype, collection: CategoryProductitemtype.all.order(:name), prompt: "Please Select", label: false %></div>
+          <div class="category_drop_field">
+            <div class="product_label">label</div>
+            <div><%= f.association :category_productitemtype, collection: CategoryProductitemtype.all.order(:name), prompt: "Please Select", label: false %></div>
+          </div>
 
           <!--category-->
-          <div class="category_drop_field"><%= f.grouped_collection_select :category_productsubtype_id, CategoryProductitemtype.order(:name), :category_productsubtypes, :name, :id, :name, include_blank: false, prompt: "Please Select", label: false %></div>
+          <div class="category_drop_field">
+            <div class="product_label">label</div>
+            <div><%= f.grouped_collection_select :category_productsubtype_id, CategoryProductitemtype.order(:name), :category_productsubtypes, :name, :id, :name, include_blank: false, prompt: "Please Select", label: false %></div>
+          </div>
 
           <!--category-->
-          <div class="category_drop_field"><%= f.grouped_collection_select :category_productstyle_id, CategoryProductsubtype.order(:name), :category_productstyles, :name, :id, :name, include_blank: false, prompt: "Please Select" %></div>
+          <div class="category_drop_field">
+            <div class="product_label">label</div>
+            <div><%= f.grouped_collection_select :category_productstyle_id, CategoryProductsubtype.order(:name), :category_productstyles, :name, :id, :name, include_blank: false, prompt: "Please Select" %></div>
+          </div>
         </div>
       </div>
       <!--section-->
